# web_sql

./: .gitignore  1.sql  10.sql  11_.sql  12_.sql  2.sql  3.sql  4.sql  5.sql  6.sql  7.sql  8.sql  9.sql  all_queries.sql  ht.db  ht_create_tables.py  ht_input_data.py  ht_tables_creation.sql  pyproject.toml  read_queries.py
